--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Save The Mario - Web Game Programming</title>
+		<title>Assignment 4 - Web Game Programming</title>
 		<link rel="stylesheet" href="style/style.css">
 		<link rel="stylesheet" href="style/w3.css">
 </head>
@@ -12,18 +12,9 @@
 
 
 <div id="frame">
-
 	<div id="statusBar">
-		<div class="gamestats stats">
-		</div>
 		
-		<div class="gamelevel stats">
-			Level <span class="levelcount">1</span>
-		</div>
-
-		<div class="controls"><a href="#" class="soundcontrol"><img src="img/unmute.png" /></a></div>
 	</div>
-
 	<canvas id="gameCanvas" width="900" height="600"></canvas>
 
 	<div id="mainmenu" class="menucanvas noselect">
