--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 	<canvas id="gameCanvas" width="900" height="600"></canvas>
 
 	<div id="mainmenu" class="menucanvas noselect">
+
+		<div class="gamelogo"><img src="img/logo.png" /></div>
+
+		<div class="runningmario"><img src="img/runnningmario.png" /></div>
+		
 		<div id="" class="allthethings">
 			<div id="btnstartgame" class="menubutton firstitem"><p>START GAME</p></div>
 			<div id="btninstructions" class="menubutton seconditem"><p>INSTRUCTIONS</p></div>
