--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 		</div>
 		
 		<div class="gamelevel stats">
-			Level <span class="levelcount">1</span>
+			Level <span id="levelcount" class="levelcount">1</span>
+		</div>
+
+		<div class="gamelevel stats">
+			Score <span id="scorecount" class="scorecount">0</span>
 		</div>
 
 		<div class="controls"><a href="#" class="soundcontrol"><img src="img/unmute.png" /></a></div>
@@ -31,7 +35,7 @@
 		<div class="gamelogo"><img src="img/logo.png" /></div>
 
 		<div class="runningmario"><img src="img/runnningmario.png" /></div>
-		
+
 		<div id="" class="allthethings">
 			<div id="btnstartgame" class="menubutton firstitem"><p>START GAME</p></div>
 			<div id="btninstructions" class="menubutton seconditem"><p>INSTRUCTIONS</p></div>
@@ -63,6 +67,7 @@
 	</div> 
 
 	<div id="gameover" class="menucanvas noselect transparent">
+		<div class="highscore"></div>
 		<div id="" class="allthethings">
 			<div id="btnexitfromover" class="menubutton seconditem"><p>MAIN MENU</p></div>
 		</div>
